--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/src/assets/img/icon.webp" />
+        <link rel="icon" type="image/svg+xml" href="./src/assets/img/icon.webp" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Online Courses - Learn Anything, On Your Scholude | Udemy</title>
         
